# web_h_10

web_h_10/: pyproject.toml
web_h_10/hm_project/: db.sqlite3  manage.py
web_h_10/hm_project/hm_project/: asgi.py  settings.py  urls.py  wsgi.py
web_h_10/hm_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
web_h_10/hm_project/quotes/migrations/: 0001_initial.py
web_h_10/hm_project/quotes/static/quotes/: style.css
web_h_10/hm_project/quotes/templates/quotes/: author's_page.html  author.html  base.html  index.html  quote.html
web_h_10/hm_project/quotes/templatetags/: extract.py
web_h_10/hm_project/users/: forms.py  urls.py  views.py
web_h_10/hm_project/users/templates/: login.html  signup.html
web_h_10/hm_project/utils/: add_quotes_to_mongo.py  migration.py  quotes.json
