[tool.poetry]
name = "web-h-10"
version = "0.1.0"
description = ""
authors = ["laugh-through-tears <fedoryshyn.juliia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
pymongo = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
